Fix aligning levels in Chrome also..

--- a/styles/layout.module.scss
+++ b/styles/layout.module.scss
@@ -11,13 +11,11 @@
 
 .mlAuto {
   margin-left: auto;
-  justify-content: right;
   flex: 1;
 }
 
 .mrAuto {
   margin-right: auto;
-  justify-content: left;
   flex: 1;
 }
 
